# advent-of-code

./: .gitignore
day1/: Cargo.toml
day1/src/: a.rs  b.rs
day2/: Cargo.toml
day2/src/: a.rs  b.rs
day3/: Cargo.toml
day3/src/: a.rs  b.rs
day4/: Cargo.toml
day4/src/: a.rs  b.rs
day5/: Cargo.toml
day5/res/: input.txt
day5/src/: a.rs  b.rs
