[package]
name = "day5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day5_a"
path = "src/a.rs"

[[bin]]
name = "day5_b"
path = "src/b.rs"

[dependencies]
itertools = "0.10.5"
regex = "1.8.3"
atoi = "2.0.0"
